Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,32 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'Visual Studio Professional(cb9ac514-a7d4-4892-8b9d-537c4ad22fb3)'
+    scriptType: 'ps'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      # Function app and storage account names must be unique.
+      
+      # Variable block
+      let "randomIdentifier=$RANDOM*$RANDOM"
+      location="eastus"
+      resourceGroup="msdocs-azure-functions-rg-$randomIdentifier"
+      tag="create-function-app-consumption"
+      storage="msdocsaccount$randomIdentifier"
+      functionApp="msdocs-serverless-function-$randomIdentifier"
+      skuStorage="Standard_LRS"
+      functionsVersion="4"
+      
+      # Create a resource group
+      echo "Creating $resourceGroup in "$location"..."
+      az group create --name $resourceGroup --location "$location" --tags $tag
+      
+      # Create an Azure storage account in the resource group.
+      echo "Creating $storage"
+      az storage account create --name $storage --location "$location" --resource-group $resourceGroup --sku $skuStorage
+      
+      # Create a serverless function app in the resource group.
+      echo "Creating $functionApp"
+      az functionapp create --name $functionApp --storage-account $storage --consumption-plan-location "$location" --resource-group $resourceGroup --functions-version $functionsVersion
