--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,23 +22,24 @@ steps:
       # Function app and storage account names must be unique.
       
       # Variable block
-      let "randomIdentifier=$RANDOM*$RANDOM"
-      location="eastus"
-      resourceGroup="msdocs-azure-functions-rg-$randomIdentifier"
-      tag="create-function-app-consumption"
-      storage="msdocsaccount$randomIdentifier"
-      functionApp="msdocs-serverless-function-$randomIdentifier"
-      skuStorage="Standard_LRS"
-      functionsVersion="4"
+      $randomIdentifier = Get-Random
+      $location = "eastus"
+      $resourceGroup = "msdocs-azure-functions-rg-$randomIdentifier"
+      $tag = @{script = "create-function-app-consumption-python"}
+      $storage = "msdocsaccount$randomIdentifier"
+      $functionApp = "msdocs-serverless-python-function-$randomIdentifier"
+      $skuStorage = "Standard_LRS"
+      $functionsVersion = "4"
+      $pythonVersion = "3.9" #Allowed values: 3.7, 3.8, and 3.9
       
       # Create a resource group
-      echo "Creating $resourceGroup in "$location"..."
-      az group create --name $resourceGroup --location "$location" --tags $tag
+      Write-Host "Creating $resourceGroup in $location..."
+      New-AzResourceGroup -Name $resourceGroup -Location $location -Tag $tag
       
       # Create an Azure storage account in the resource group.
-      echo "Creating $storage"
-      az storage account create --name $storage --location "$location" --resource-group $resourceGroup --sku $skuStorage
+      Write-Host "Creating $storage"
+      New-AzStorageAccount -Name $storage -Location $location -ResourceGroupName $resourceGroup -SkuName $skuStorage
       
-      # Create a serverless function app in the resource group.
-      echo "Creating $functionApp"
-      az functionapp create --name $functionApp --storage-account $storage --consumption-plan-location "$location" --resource-group $resourceGroup --functions-version $functionsVersion
+      # Create a serverless Python function app in the resource group.
+      Write-Host "Creating $functionApp"
+      New-AzFunctionApp -Name $functionApp -StorageAccountName $storage -Location $location -ResourceGroupName $resourceGroup -OSType Linux -Runtime Python -RuntimeVersion $pythonVersion -FunctionsVersion $functionsVersion
