--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,21 +24,20 @@ steps:
       $randomIdentifier = Get-Random
       $location = "eastus"
       $resourceGroup = "msdocs-azure-functions-rg-$randomIdentifier"
-      $tag = @{script = "create-function-app-consumption-python"}
+      $tag = @{script = "create-function-app-consumption"}
       $storage = "msdocsaccount$randomIdentifier"
-      $functionApp = "msdocs-serverless-python-function-$randomIdentifier"
+      $functionApp = "msdocs-serverless-function-$randomIdentifier"
       $skuStorage = "Standard_LRS"
       $functionsVersion = "4"
-      $pythonVersion = "3.9" #Allowed values: 3.7, 3.8, and 3.9
       
       # Create a resource group
       Write-Host "Creating $resourceGroup in $location..."
       New-AzResourceGroup -Name $resourceGroup -Location $location -Tag $tag
-      
+
       # Create an Azure storage account in the resource group.
       Write-Host "Creating $storage"
       New-AzStorageAccount -Name $storage -Location $location -ResourceGroupName $resourceGroup -SkuName $skuStorage
-      
-      # Create a serverless Python function app in the resource group.
+
+      # Create a serverless function app in the resource group.
       Write-Host "Creating $functionApp"
-      New-AzFunctionApp -Name $functionApp -StorageAccountName $storage -Location $location -ResourceGroupName $resourceGroup -OSType Linux -Runtime Python -RuntimeVersion $pythonVersion -FunctionsVersion $functionsVersion
+      New-AzFunctionApp -Name $functionApp -StorageAccountName $storage -Location $location -ResourceGroupName $resourceGroup -Runtime DotNet-Isolated -FunctionsVersion $functionsVersion
