--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,19 +1,32 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- master
+- main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'windows-latest'
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+variables:
+  azureSubscription: 'Visual Studio Professional(cb9ac514-a7d4-4892-8b9d-537c4ad22fb3)'  # Azure service connection name
+  resourceGroup: 'ap-dev-apollo2-smartpos-rg'          # Desired resource group name
+  location: 'eastasia'               # e.g., 'eastus'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+- stage: CreateResourceGroup
+  jobs:
+  - job: CreateRG
+    steps:
+    - task: AzurePowerShell@5
+      inputs:
+        azureSubscription: $(azureSubscription)
+        ScriptType: 'InlineScript'
+        Inline: |
+          # Check if the resource group exists
+          $resourceGroupExists = Get-AzResourceGroup -Name $(resourceGroup) -ErrorAction SilentlyContinue
+
+          if (-not $resourceGroupExists) {
+              # Create the resource group
+              New-AzResourceGroup -Name $(resourceGroup) -Location $(location)
+              Write-Output "Resource Group '$(resourceGroup)' created successfully."
+          } else {
+              Write-Output "Resource Group '$(resourceGroup)' already exists."
+          }
+        azurePowerShellVersion: 'LatestVersion'
