Update azure-pipelines-5.yml for Azure Pipelines

--- a/azure-pipelines-5.yml
+++ b/azure-pipelines-5.yml
@@ -35,4 +35,4 @@ stages:
           
           Write-Output "Granted Azure Data Factory '$($dataFactoryName)' access to Key Vault '$($keyVaultName)'."
         
-          azurePowerShellVersion: 'LatestVersion'
+          azurePowerShellVersion: 'latestVersion'
