Update azure-pipelines-5.yml for Azure Pipelines

--- a/azure-pipelines-5.yml
+++ b/azure-pipelines-5.yml
@@ -34,5 +34,4 @@ stages:
           Set-AzKeyVaultAccessPolicy -VaultName $(keyVaultName) -AccessPolicy $accessPolicy
           
           Write-Output "Granted Azure Data Factory '$($dataFactoryName)' access to Key Vault '$($keyVaultName)'."
-        
-          azurePowerShellVersion: 1.0.1
+        azurePowerShellVersion: 'LatestVersion'
