--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -6,12 +6,12 @@ pool:
 
 variables:
   azureSubscription: 'Visual Studio Professional(cb9ac514-a7d4-4892-8b9d-537c4ad22fb3)'
-  resourceGroup: 'dev9-smartpos-rg'
+  resourceGroup: 'dev10-smartpos-rg'
   location: 'southindia'               # e.g., 'eastus'
-  storageAccount: 'dev9smartposstorageac'      # Unique name for the storage account
-  dataFactory: 'dev9smartposadf'         # Name for the Azure Data Factory
-  keyVault: 'dev9smartposkeyvalut'               # Unique name for the Azure Key Vault
-  functionAppName: 'dev9smartposfunctionapp'     # Unique name for the Azure Function App
+  storageAccount: 'dev10smartposstorageac'      # Unique name for the storage account
+  dataFactory: 'dev10smartposadf'         # Name for the Azure Data Factory
+  keyVault: 'dev10smartposkeyvalut'               # Unique name for the Azure Key Vault
+  functionAppName: 'dev10smartposfunctionapp'     # Unique name for the Azure Function App
   tableStorageName: 'smartposlookuptable'           # Name for the Azure Table Storage
   blobContainerName: 'smartposcontainer'         # Name for the Azure Blob Storage container
   IsLinux : false
