--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -85,8 +85,8 @@ stages:
           if (-not $functionAppExists) {
               # Create a Consumption Plan for the Function App
               $planName = "$(functionAppName)-plan"
-              New-AzFunctionAppPlan -ResourceGroupName $(resourceGroup) -Name $planName -Location $(location) -Sku 'Y1' -IsLinux $false -Tier 'Consumption'
-              
+              New-AzFunctionAppPlan -ResourceGroupName $(resourceGroup) -Name $planName -Location $(location) -Sku 'EP1'-WorkerType Windows
+             
               # Create the Function App
               New-AzFunctionApp -ResourceGroupName $(resourceGroup) -Name $(functionAppName) -Location $(location) -StorageAccountName $(storageAccount) -Plan $planName -Runtime 'dotnet' -FunctionsVersion '3'
               Write-Output "Function App '$(functionAppName)' created successfully in resource group '$(resourceGroup)'."
