--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -6,14 +6,14 @@ pool:
 
 variables:
   azureSubscription: 'Visual Studio Professional(cb9ac514-a7d4-4892-8b9d-537c4ad22fb3)'
-  resourceGroup: 'dev11-smartpos-rg'
+  resourceGroup: 'dev12-smartpos-rg'
   location: 'southindia'               # e.g., 'eastus'
-  storageAccount: 'dev11smartposstorageac'      # Unique name for the storage account
-  dataFactory: 'dev11smartposadf'         # Name for the Azure Data Factory
-  keyVault: 'dev11smartposkeyvalut'               # Unique name for the Azure Key Vault
-  functionAppName: 'dev11smartposfunctionapp'     # Unique name for the Azure Function App
-  tableStorageName: 'smartposlookuptable'           # Name for the Azure Table Storage
-  blobContainerName: 'smartposcontainer'         # Name for the Azure Blob Storage container
+  storageAccount: 'dev12smartposstorageac'      # Unique name for the storage account
+  dataFactory: 'dev12smartposadf'         # Name for the Azure Data Factory
+  keyVault: 'dev12smartposkeyvalut'               # Unique name for the Azure Key Vault
+  functionAppName: 'dev12smartposfunctionapp'     # Unique name for the Azure Function App
+  tableStorageName: 'devsmartposlookuptable'           # Name for the Azure Table Storage
+  blobContainerName: 'devsmartposcontainer'         # Name for the Azure Blob Storage container
   IsLinux : false
 stages:
 - stage: CreateResources
