--- a/azure-pipelines-6.yml
+++ b/azure-pipelines-6.yml
@@ -79,6 +79,17 @@ stages:
           } else {
               Write-Output "Blob Container '$($blobContainerName)' already exists in Storage Account '$($storageAccount)'."
           }
+          # Check if the Function App exists
+          $functionAppExists = Get-AzFunctionApp -ResourceGroupName $(resourceGroup) -Name $(functionAppName) -ErrorAction SilentlyContinue
+
+          if (-not $functionAppExists) {
+              # Create Function App
+              New-AzFunctionApp -ResourceGroupName $(resourceGroup) -Name $(functionAppName) -Location $(location) -StorageAccountName $(storageAccountName) -Runtime $(runtime) -Sku $(sku)
+              Write-Output "Function App '$(functionAppName)' created successfully in resource group '$(resourceGroup)'."
+          } else {
+              Write-Output "Function App '$(functionAppName)' already exists in resource group '$(resourceGroup)'."
+          }
+
           # Create Function App
           $functionAppExists = Get-AzFunctionApp -ResourceGroupName $(resourceGroup) -Name $(functionAppName) -ErrorAction SilentlyContinue
 
